@@ -290,7 +290,8 @@ public:
     Q_INVOKABLE void cancelQrImport();
 
     Q_INVOKABLE bool prepareQrDecoder();
-    Q_INVOKABLE void evaluateQrImage(QImage image);
+    Q_INVOKABLE void evaluateQrImage(QImage image, bool emitFailureSignal = false);
+    Q_INVOKABLE void loadQrImage(QString filepath);
     /* ============ End QR code related stuff ================= */
 
     /* ========================================================
@@ -416,6 +417,7 @@ signals:
     void readyForQrBackupImport();
 
     void qrDecoded(QString qrContent);
+    void qrDecodingFailed(QString errorMessage);
     /* ============ End QR code related stuff ================= */
 
 public slots:
