@@ -45,6 +45,7 @@
         <file>pages/PickerFileToSend.qml</file>
         <file>pages/PickerImageToExport.qml</file>
         <file>pages/PickerImageToSend.qml</file>
+        <file>pages/PickerQrImageLoad.qml</file>
         <file>pages/ProgressConfigAccount.qml</file>
         <file>pages/ProgressBackupImport.qml</file>
         <file>pages/ProgressBackupExport.qml</file>
