@@ -2,6 +2,7 @@
 Feature: Clear chat
 Feature: Act as primary device to add second device via QR code
 Feature: In-app QR code scanning
+Feature: Load QR code as image
 UI: Adapt link colors for better contrast
 UI: Show information if provider needs special settings
 UI: Truncate long quoted texts; click toggles expand/collapse if jump to quoted msg is not possible
